Fix text align of wrapper list message

--- a/less/gluon/wrapper.less
+++ b/less/gluon/wrapper.less
@@ -43,6 +43,7 @@
         display: inline-block;
 
         > ul {
+            text-align: left;
             padding-left: 15px;
         }
 
